fixes to story and night shift (not working)

--- a/pages/pageStyle.css
+++ b/pages/pageStyle.css
@@ -61,24 +61,6 @@ margin: 0;
                 text-decoration: underline;
             }
 
-            label {
-                justify-content: right;
-            }
-
-
-            input[type=checkbox] {
-                position: absolute;
-                top: 99999px;
-                left: -9999px;
-            }
-            label {
-            -webkit-appearance: push-button;
-            -moz-appearance: button;
-            display: inline-block;
-            margin: 60px 0 10px 0;
-            cursor: pointer;
-            }
-
             #bio {
                 display: none;
             }
@@ -112,7 +94,7 @@ text-align: center;
 font-size: 3em;
 }
 
-.stanza {
+.stanza, .hangingindent {
   padding-left: 22px ;
   text-indent: -22px ;
 }
