--- a/styles.css
+++ b/styles.css
@@ -29,8 +29,8 @@ body, html {
     height: 100px;
     margin-left: 12.5%;
     margin-right: 12.5%;
-
     }
+
 
     #parent {
         padding-top: 50px;
@@ -98,7 +98,8 @@ body, html {
 
   margin-right: 50px;
     height: max-content;
-}
+    line-height: 1.3;
+  }
                         #playlistlink {
                             color: blue;
                             text-decoration: underline;
@@ -106,7 +107,7 @@ body, html {
 
                         input[type=checkbox] {
                             position: absolute;
-                            top: 99999px;
+                            bottom: 0px;
                             left: -9999px;
                         }
                         label {
@@ -131,3 +132,27 @@ body, html {
                             background-color: black;
                             color: white;
                             }
+
+/* unvisited link */
+a:link {
+}
+
+/* visited link */
+a:visited {
+}
+
+/* mouse over link */
+a:hover {
+}
+
+/* selected link */
+a:active {
+}
+
+
+
+@media (max-height: 275px) {
+body {
+background-image: linear-gradient( #fcff28 0%, cyan 100%);
+filter: invert(1);
+}
